--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2" url="https://github.com/krasa/FrameSwitcher">
 	<name>Frame Switcher</name>
 	<id>FrameSwitcher</id>
-	<version>1.2</version>
+	<version>1.3</version>
   
 	<vendor url="https://github.com/krasa/FrameSwitcher" email="vojta.krasa@gmail.com">Vojtech
 		Krasa
@@ -13,9 +13,13 @@
       ]]></description>
 
   <change-notes><![CDATA[
+		  1.3 		  
+		 <br> - used speed search in dialog
+		 <br> <br> 
 		  1.2 		  
 		 <br> - sorting by name with ignored case
-		<br> <br> 1.1 		  
+		 <br> <br>
+		 1.1 		  
 		 <br> - handling of minimized frames
 		 <br> - changed default shortcut to ALT + F2
 		 <br> - sorting by name
