--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2" url="https://github.com/krasa/FrameSwitcher">
 	<name>Frame Switcher</name>
 	<id>FrameSwitcher</id>
-	<version>1.4</version>
+	<version>2.0</version>
   
 	<vendor url="https://github.com/krasa/FrameSwitcher" email="vojta.krasa@gmail.com">Vojtech
 		Krasa
@@ -13,7 +13,12 @@
       ]]></description>
 
   <change-notes><![CDATA[
-		  1.4		  
+          2.0
+         <br/> - recent projects list added to the popup
+         <br/> - alphanumeric mnemonics
+         <br/> - now current frame isn't disabled
+         <br/><br/>
+		  1.4
 		 <br> - usable during indexing
 		 <br> <br> 
 		  1.3 		  
