--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2" url="https://github.com/krasa/FrameSwitcher">
 	<name>Frame Switcher</name>
 	<id>FrameSwitcher</id>
-	<version>2.0</version>
+	<version>2.1</version>
 
 	<vendor url="https://github.com/krasa/FrameSwitcher" email="vojta.krasa@gmail.com">Vojtech
 		Krasa
@@ -13,6 +13,9 @@
       ]]></description>
 
 	<change-notes><![CDATA[
+	      2.1
+	     <br/> - current frame is marked in the list
+         <br/><br/>
           2.0
          <br/> - recent projects list added to the popup
          <br/> - settings for filtering recent projects
