--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2" url="https://github.com/krasa/FrameSwitcher">
 	<name>Frame Switcher</name>
 	<id>FrameSwitcher</id>
-	<version>2.1</version>
+	<version>2.2</version>
 
 	<vendor url="https://github.com/krasa/FrameSwitcher" email="vojta.krasa@gmail.com">Vojtech
 		Krasa
@@ -14,6 +14,9 @@
       ]]></description>
 
 	<change-notes><![CDATA[
+	      2.2
+	     <br/> - fixed compatibility with PhpStorm
+         <br/><br/>
 	      2.1
 	     <br/> - current frame is marked in the list
          <br/><br/>
