--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2" url="https://github.com/krasa/FrameSwitcher">
 	<name>Frame Switcher</name>
 	<id>FrameSwitcher</id>
-	<version>3.5.0</version>
+	<version>3.5.1</version>
 
 	<vendor url="https://github.com/krasa/FrameSwitcher" email="vojta.krasa@gmail.com">Vojtech
 		Krasa
@@ -30,6 +30,8 @@
       ]]></description>
 
 	<change-notes><![CDATA[
+	      3.5.1
+		  <br/> - IntelliJ 2016 compatibility
 	      3.5
 		  <br/> - Delete key for deleting recent projects from history
 		  <br/> - Max recent projects settings changes Registry value of "ide.max.recent.projects"
@@ -119,6 +121,7 @@
 	</actions>
 
 	<extensions defaultExtensionNs="com.intellij">
-		<!-- Add your extensions here -->
+		<applicationConfigurable instance="krasa.frameswitcher.MyConfigurable" id="FrameSwitcher" displayName="Frame Switcher" />
+	
 	</extensions>
 </idea-plugin>
