--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2" url="https://github.com/krasa/FrameSwitcher">
 	<name>Frame Switcher</name>
 	<id>FrameSwitcher</id>
-    <version>3.11.0-162</version>
+    <version>3.12.0-162</version>
 
 	<vendor url="https://github.com/krasa/FrameSwitcher" email="vojta.krasa@gmail.com">Vojtech
 		Krasa
@@ -30,6 +30,9 @@
       ]]></description>
 
     <change-notes><![CDATA[
+	      3.12.0
+		  <br/> - Fix for duplicate projects in IJ 2018.2 
+          <br/><br/>
 	      3.11.0
 		  <br/> - Lost focus from editor when switching
           <br/><br/>
