--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2" url="https://github.com/krasa/FrameSwitcher">
 	<name>Frame Switcher</name>
 	<id>FrameSwitcher</id>
-    <version>3.15.0-162</version>
+	<version>3.16.0-162</version>
 
 	<vendor url="https://github.com/krasa/FrameSwitcher" email="vojta.krasa@gmail.com">Vojtech
 		Krasa
@@ -30,6 +30,8 @@
       ]]></description>
 
     <change-notes><![CDATA[
+	      3.16.0
+		  <br/> - Hopefully more reliable switching
 	      3.15.0
 		  <br/> - Workaround for frame leak in Intellij 
 	      3.14.0
