--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2" url="https://github.com/krasa/FrameSwitcher">
     <name>Frame Switcher</name>
     <id>FrameSwitcher</id>
-    <version>3.18.0-182</version>
+    <version>3.19.0-182</version>
 
     <vendor url="https://github.com/krasa/FrameSwitcher" email="vojta.krasa@gmail.com">Vojtech
         Krasa
@@ -29,7 +29,10 @@
       (Big thanks to Eugene Mustaphin for contributions.)
       ]]></description>
 
-    <change-notes><![CDATA[
+    <change-notes><![CDATA[  
+	      3.19.0
+		  <br/> - Reopening in transaction (<a href=https://youtrack.jetbrains.com/issue/IDEA-210479>IDEA-210479</a>)
+	        <br/><br/>
 	      3.18.0
 		  <br/> - NPE fix
 		    <br/><br/>
